[gd_scene load_steps=40 format=3 uid="uid://beiqmv6x223mi"]

[ext_resource type="Script" uid="uid://co4mhxtf1ubni" path="res://Scenes/Entities/Player/player.gd" id="1_a3d8c"]
[ext_resource type="Script" uid="uid://m2xddct1li7e" path="res://Scenes/Entities/Player/rage_meter.gd" id="2_htcer"]
[ext_resource type="Texture2D" uid="uid://bpvomlgf8da3s" path="res://Art/Player.png" id="2_mtuoh"]
[ext_resource type="Texture2D" uid="uid://dqqdur6g26424" path="res://Art/baseball bat.png" id="3_i4twt"]
[ext_resource type="Script" uid="uid://dgbgdpglom8q6" path="res://Scenes/Entities/Player/weapon.gd" id="3_mtuoh"]
[ext_resource type="Texture2D" uid="uid://ef7pe5x3xa0d" path="res://Art/UI/RagebarOutline.png" id="4_75l7y"]
[ext_resource type="AudioStream" uid="uid://cfcf62sp7vb8c" path="res://Audio/swinging bat.wav" id="4_s4doi"]
[ext_resource type="Texture2D" uid="uid://cswh3ln6miwqe" path="res://Art/UI/RagebarFill.png" id="5_5o8lj"]
[ext_resource type="Theme" uid="uid://ngnx3f64w8bv" path="res://Art/UI/Base_theme.tres" id="7_5o8lj"]
[ext_resource type="Texture2D" uid="uid://c7kmtgdm340oh" path="res://Art/UI/BrownPanel.png" id="8_i4twt"]
[ext_resource type="Script" uid="uid://bac707fgeciyo" path="res://Scenes/Menu/game_over_screen.gd" id="8_p22ti"]
[ext_resource type="Texture2D" uid="uid://bwa8vupxx27kl" path="res://Art/game over.png" id="9_pc8mt"]
[ext_resource type="Texture2D" uid="uid://ddddusb5qipdr" path="res://Art/press E sprite.png" id="10_q8fdp"]
[ext_resource type="Texture2D" uid="uid://dmyvs8y27etxs" path="res://Art/CaughtBarBG.png" id="11_0fwr3"]
[ext_resource type="Script" uid="uid://q0g6cjbusccl" path="res://Scenes/Entities/Player/score.gd" id="11_hkmxn"]
[ext_resource type="Texture2D" uid="uid://c7igui04b0x4j" path="res://Art/CaughtBarFill.png" id="12_pc8mt"]
[ext_resource type="Texture2D" uid="uid://d3srcbg350phb" path="res://Art/score board.png" id="12_qtr04"]
[ext_resource type="Script" uid="uid://de1acshs6xjwr" path="res://Scenes/Menu/settings.gd" id="13_oedhw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mtuoh"]
radius = 3.0
height = 32.0

[sub_resource type="Animation" id="Animation_7g0yx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:is_attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_06tpx"]
resource_name = "Swing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.26893, 4.01426, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:is_attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_dey5f"]
resource_name = "Swing_2"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [4.01426, 2.0944, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:is_attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5xpd"]
_data = {
&"RESET": SubResource("Animation_7g0yx"),
&"Swing": SubResource("Animation_06tpx"),
&"Swing_2": SubResource("Animation_dey5f")
}

[sub_resource type="Animation" id="Animation_htcer"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q8fdp"]
resource_name = "caught_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [230, 231, 232, 233, 234, 235]
}

[sub_resource type="Animation" id="Animation_i4twt"]
resource_name = "caught_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [224, 225, 226, 227, 228, 229]
}

[sub_resource type="Animation" id="Animation_jlvik"]
resource_name = "idle_down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_0u5uq"]
resource_name = "idle_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71, 72, 73]
}

[sub_resource type="Animation" id="Animation_mtuoh"]
resource_name = "idle_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="Animation" id="Animation_dd0ac"]
resource_name = "idle_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [62, 63, 64, 65, 66, 67]
}

[sub_resource type="Animation" id="Animation_oikmp"]
resource_name = "walk_down"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [130, 131, 132, 133, 134, 135]
}

[sub_resource type="Animation" id="Animation_74mp2"]
resource_name = "walk_left"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [124, 125, 126, 127, 128, 129]
}

[sub_resource type="Animation" id="Animation_gk6dx"]
resource_name = "walk_right"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 113, 114, 115, 116, 117]
}

[sub_resource type="Animation" id="Animation_jhyir"]
resource_name = "walk_up"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [118, 119, 120, 121, 122, 123]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oikmp"]
_data = {
&"RESET": SubResource("Animation_htcer"),
&"caught_left": SubResource("Animation_q8fdp"),
&"caught_right": SubResource("Animation_i4twt"),
&"idle_down": SubResource("Animation_jlvik"),
&"idle_left": SubResource("Animation_0u5uq"),
&"idle_right": SubResource("Animation_mtuoh"),
&"idle_up": SubResource("Animation_dd0ac"),
&"walk_down": SubResource("Animation_oikmp"),
&"walk_left": SubResource("Animation_74mp2"),
&"walk_right": SubResource("Animation_gk6dx"),
&"walk_up": SubResource("Animation_jhyir")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3d8c"]
radius = 6.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0yfgq"]
atlas = ExtResource("10_q8fdp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fwr3"]
atlas = ExtResource("10_q8fdp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pc8mt"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_0yfgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fwr3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_a3d8c")

[node name="WeaponPivot" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -6)
script = ExtResource("3_mtuoh")

[node name="Sprite2D" type="Sprite2D" parent="WeaponPivot"]
rotation = 3.14159
texture = ExtResource("3_i4twt")
offset = Vector2(-18.435, 0)

[node name="AttackArea" type="Area2D" parent="WeaponPivot/Sprite2D"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPivot/Sprite2D/AttackArea"]
position = Vector2(-19, 1.51e-06)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mtuoh")

[node name="WeaponAnimator" type="AnimationPlayer" parent="WeaponPivot"]
libraries = {
&"": SubResource("AnimationLibrary_r5xpd")
}

[node name="Attack_Timer" type="Timer" parent="WeaponPivot"]
wait_time = 0.6

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="WeaponPivot"]
stream = ExtResource("4_s4doi")
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Rage" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
scale = Vector2(3, 3)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RageMeter" type="TextureProgressBar" parent="CanvasLayer/Rage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -111.0
offset_right = 111.0
offset_bottom = 21.0
grow_horizontal = 2
value = 50.0
nine_patch_stretch = true
stretch_margin_left = 9
stretch_margin_top = 7
stretch_margin_right = 9
stretch_margin_bottom = 6
texture_under = ExtResource("4_75l7y")
texture_progress = ExtResource("5_5o8lj")
script = ExtResource("2_htcer")

[node name="RAGE" type="Label" parent="CanvasLayer/Rage/RageMeter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -12.5
offset_right = 24.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_5o8lj")
text = "RAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecayRate" type="Label" parent="CanvasLayer/Rage/RageMeter"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -12.5
offset_right = -9.0
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("7_5o8lj")
text = "-3"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOverScreen" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("7_5o8lj")
script = ExtResource("8_p22ti")

[node name="TextureRect" type="NinePatchRect" parent="CanvasLayer/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -13.0
offset_right = 64.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_i4twt")
region_rect = Rect2(15, 16, 97, 96)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Control" type="Control" parent="CanvasLayer/GameOverScreen/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 7.5
offset_top = 14.6667
offset_right = 7.5
offset_bottom = 14.6667
grow_horizontal = 2

[node name="GameOver" type="Sprite2D" parent="CanvasLayer/GameOverScreen/TextureRect/Control"]
texture = ExtResource("9_pc8mt")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 29.0
offset_right = 28.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="PlayButton" type="Button" parent="CanvasLayer/GameOverScreen/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Replay"

[node name="QuitToMenu" type="Button" parent="CanvasLayer/GameOverScreen/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Quit To Menu"

[node name="QuitButton" type="Button" parent="CanvasLayer/GameOverScreen/TextureRect/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Score" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme = ExtResource("7_5o8lj")
script = ExtResource("11_hkmxn")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Score"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -172.0
offset_top = 1.0
offset_right = -128.0
offset_bottom = 48.0
grow_horizontal = 0
scale = Vector2(3, 3)
texture = ExtResource("12_qtr04")

[node name="Label" type="Label" parent="CanvasLayer/Score"]
modulate = Color(1, 1, 0.270588, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_top = 86.0
offset_right = -24.0
offset_bottom = 124.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "99999"

[node name="Settings Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_5o8lj")
script = ExtResource("13_oedhw")

[node name="TextureRect2" type="NinePatchRect" parent="CanvasLayer/Settings Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -80.0
offset_right = 321.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_i4twt")
region_rect = Rect2(15, 16, 97, 96)
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings Menu/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Master" type="HSlider" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 5.0
step = 0.1

[node name="Music" type="HSlider" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 5.0
step = 0.1

[node name="SFX" type="HSlider" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
max_value = 5.0
step = 0.1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 21

[node name="Label" type="Label" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Master"

[node name="Label2" type="Label" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="Label3" type="Label" parent="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "SFX"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings Menu/TextureRect2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="QuitButton" type="Button" parent="CanvasLayer/Settings Menu/TextureRect2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oikmp")
}

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_mtuoh")
offset = Vector2(0, -8)
hframes = 56
vframes = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_a3d8c")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="GracePeriodTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CaughtBar" type="Node2D" parent="."]
visible = false

[node name="Press E animation" type="AnimatedSprite2D" parent="CaughtBar"]
position = Vector2(29, -29)
scale = Vector2(0.648438, 0.648438)
sprite_frames = SubResource("SpriteFrames_pc8mt")
autoplay = "default"
frame_progress = 0.361977

[node name="TextureProgressBar" type="TextureProgressBar" parent="CaughtBar"]
offset_left = -27.0
offset_top = -37.0
offset_right = 21.0
offset_bottom = -21.0
value = 50.0
texture_under = ExtResource("11_0fwr3")
texture_progress = ExtResource("12_pc8mt")

[connection signal="timeout" from="WeaponPivot/Attack_Timer" to="WeaponPivot" method="_on_attack_timer_timeout"]
[connection signal="rage_over" from="CanvasLayer/Rage/RageMeter" to="CanvasLayer/GameOverScreen" method="_on_rage_meter_rage_over"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/TextureRect/VBoxContainer/PlayButton" to="CanvasLayer/GameOverScreen" method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/TextureRect/VBoxContainer/QuitToMenu" to="CanvasLayer/GameOverScreen" method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/TextureRect/VBoxContainer/QuitButton" to="CanvasLayer/GameOverScreen" method="_on_quit_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer/Master" to="CanvasLayer/Settings Menu" method="_on_master_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer/Music" to="CanvasLayer/Settings Menu" method="_on_music_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Settings Menu/TextureRect2/HBoxContainer/VBoxContainer/SFX" to="CanvasLayer/Settings Menu" method="_on_sfx_value_changed"]
[connection signal="pressed" from="CanvasLayer/Settings Menu/TextureRect2/VBoxContainer/QuitButton" to="CanvasLayer/Settings Menu" method="_on_quit_button_pressed"]
[connection signal="timeout" from="GracePeriodTimer" to="." method="_on_grace_period_timer_timeout"]
